--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^1.3.2",
     "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.29.3",
-    "request-promise": "^4.2.6",
     "xlsx": "^0.18.5"
   }
 }
